instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:3: error: not found: value color
setCouleurBrosse(color.blue)
                 ^