instructions.InstructionsDrawG.scala.code
droite()
baisseBrosse()
setCouleurBrosse(color.blue)
avance(4)
gauche()
avance(4)
gauche()
avance(4)
gauche()
avance(2)
gauche()
avance()